<resources>
    <string name="app_name">Good Samaritan</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="help_me">HELP ME !</string>
    <string name="plus_sign">+</string>
    <string name="add_message">Add Message</string>
    <string name="i_m_safe">I\'m Safe</string>
    <string name="credits">Credits</string>
    <string name="_0">0</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="settings">Settings</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_route">Route</string>
    <string name="map">Map</string>
    <string-array name="Department_name">
        <item>Choose Department</item>
        <item>Police Station</item>
        <item>Human Resource</item>
        <item>Municipal Corporation</item>
        <item>Minority Affair</item>
    </string-array>
</resources>
