<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/img_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/img_uid"
            android:title="@string/profile" />
        <item
            android:id="@+id/add_contacts"
            android:icon="@drawable/img_people"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/img_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/help_and_fb"
            android:icon="@drawable/img_help_and_fb"
            android:title="@string/help_feedback" />
        <item
            android:id="@+id/dr_map"
            android:icon="@drawable/img_map"
            android:title="@string/map" />
    </group>



</menu>
