<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/content_main_screen_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.goodsamaritan.drawer.home.HomeFragment"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true">




<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_0"
    android:textSize="22sp"
    android:id="@+id/credit_points"
    android:layout_alignParentRight="true"
    android:textColor="@android:color/black"
    android:layout_marginTop="5dp"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:text="@string/credits"
    android:padding="5dp"
    android:textSize="22sp"
    android:textColor="@android:color/black"
    android:id="@+id/credits"
    android:layout_toLeftOf="@id/credit_points"/>

<Button
    android:layout_width="192dp"
    android:layout_height="192dp"
    android:text="@string/help_me"
    android:id="@+id/help_me"
    android:textSize="30sp"
    android:background="@drawable/round_button"
    android:textColor="@android:color/white"
    android:layout_marginTop="80dp"
    android:layout_centerHorizontal="true">
    <requestFocus />
</Button>
<EditText
    android:id="@+id/help_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/help_me"
    android:layout_marginTop="24dp"
    android:layout_centerHorizontal="true"
    android:hint="@string/add_message"
    android:textSize="20sp"
    android:imeOptions="actionDone"
    android:inputType="textAutoComplete"
    />
<Button
    android:id="@+id/imsafe"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/i_m_safe"
    android:textSize="20sp"
    android:textAllCaps="false"
    android:layout_below="@id/help_message"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="24dp"
    android:background="@color/colorAccent"
    android:textColor="@android:color/white"
    android:enabled="false"
    />
<Button
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:text="@string/plus_sign"
    android:textSize="25sp"
    android:background="@drawable/round_button_add_message"
    android:textColor="@android:color/white"
    android:layout_below="@id/help_me"
    android:layout_toLeftOf="@id/help_message"
    android:layout_marginRight="8dp"
    android:layout_marginTop="24dp"
    android:id="@+id/plus_btn"
    />

</RelativeLayout>

